--- a/vignettes/TTU.Rmd
+++ b/vignettes/TTU.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 library(TTU)
 ```
 
-The tools in TTU are designed to make it easier to implement utility mapping studies for with [ready4 - an open source health economic model of the systems shaping mental health and wellbeing in young people](https://www.ready4-dev.com).
+The [ready4 framework model modules](https://www.ready4-dev.com/docs/framework/implementation/modularity/) in TTU are designed to make it easier to implement utility mapping studies for with [ready4 youth mental health economic model](https://www.ready4-dev.com/docs/model/) (or any other model developed with the [ready4 framework](https://www.ready4-dev.com)).
 
 This development version of the TTU package has been made available as part of the process of testing and documenting the package. [Installation instructions are on the package homepage](https://ready4-dev.github.io/TTU/index.html). Currently, one vignette article is available to demonstrate how to use the TTU package:
 
